--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,9 @@ jobs:
     name: Update File
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-java@v3
+
       - name: Run gradle command
         run: ./gradlew generateReadme
-      - name: Update README.md
-        run: |
-          sed -i 's/<reponame>/'${{ github.event.repository.name }}'/' README.md
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config user.name "github-actions[bot]"
-          git commit -am "Automated report"
-          git push
